fixed body overflow (hopefully on all browsers)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,11 @@ body {
   /* width: 98vw; */
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .container-fluid {
   padding: 0;
 }
